--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dragonball</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
@@ -38,7 +38,7 @@
 
     </footer>
 
-    <script src="/Javascript/index.js"></script>
+    <script src="Javascript/index.js"></script>
 </body>
 
 </html>
